# PROJCT_V-T

./: .gitignore  20Hz_Policy升级实施说明.md  20Hz_Policy升级改造完整路线规划.md  Direction-conditioned模型与双向训练设计说明.md  Model Phase M1实施与校验报告.md  Model Phase M2实施与校验报告.md  Model Phase M3实施与校验报告.md  Model Phase M4实施与校验报告.md  Model Phase M5-0 E0实施与评估报告.md  README.md  Stage3大delta残差诊断与修正.md  per-finger结构更新路线与基线量化.md  pyproject.toml  sample_events.csv  stage2优化.md  三指执行器对齐力空间改造说明.md  双向数据管线改造说明.md  双向跨介质数据集扩充升级注意事项说明.md  实施规格.ipynb  实时ViT_LoRA视觉主线设计方案.md  属性头更新.md  当前项目设计完整说明.md  最终建议版设计.md  界面增强测试V1.md  界面增强独立测试版设计草案.md  策略训练诊断现状.md  论文基座_项目最新总结.md  论文设计.ipynb  项目代码.md  项目代码说明.md  项目推进规划.md  项目状况.md  项目背景信息.md
.codex_tmp/: AAA最新设计.docx  launch_stage1_detached_debug.ps1  launch_stage1_formal.ps1  pwsh_window_python_test.ps1  stage1_formal_host_runner.ps1  stage1_formal_task_runner.ps1  stage1_perception_fold1_fresh_20260326_150342.yaml  stage1_start_probe.py  stage2_formal_host_runner.ps1  start_stage1_formal.cmd  实施规格v2.doc
scripts/: build_interface_context_manifest.py  build_soft_gate_targets.py  cache_stage1_visual.py  compare_control_metrics.py  compute_bidirectional_train_stats.py  diagnose_attribute_labels.py  diagnose_delta_targets.py  diagnose_per_finger_sign_oracles.py  diagnose_physical_attributes.py  diagnose_policy_control.py  diagnose_policy_timeshift.py  diagnose_reference_quality.py  evaluate.py  freeze_bidirectional_release.py  online_stub.py  preprocess.py  run_m5_e0.py  sanity_tactile_z_only.py  smoke_bidirectional_dataset.py  smoke_bidirectional_sampler.py  train.py  (+23 more)
(+162 files in other folders)
